# parchment

./: .gitignore  LICENSE  README.md  parchment.cabal  stack.yaml
app/: .Main.hs.swp  Main.hs  ScriptInterface.hs  network_stuff.hs
config/: config.scm
src/: Parchment.hs
src/Parchment/: EscSeq.hs  FString.hs  Fchar.hs  Indexed.hs  ParseState.hs  Parsing.hs  RingBuffer.hs  Session.hs  Telnet.hs  Util.hs  WorldMap.hs
test/: Spec.hs
