name:                parchment
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/parchment#readme
license:             BSD3
license-file:        LICENSE
author:              Joel Schlosser
maintainer:          example@example.com
copyright:           2016 Joel Schlosser
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable parchment
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parchment
                     , network >= 2.6
                     , bytestring >= 0.10
                     , brick >= 0.13
                     , vty
                     , text
                     , data-default
                     , microlens
                     , microlens-th
                     , containers
                     , conduit
                     , conduit-extra
                     , conduit-combinators
                     , async
                     , io-streams
                     , stm
                     , stm-conduit
                     , split
  default-language:    Haskell2010

test-suite parchment-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parchment
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/parchment
