name:                parchment
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/parchment#readme
license:             BSD3
license-file:        LICENSE
author:              Joel Schlosser
maintainer:          example@example.com
copyright:           2016 Joel Schlosser
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Parchment
      Parchment.EscSeq
      Parchment.FString
      Parchment.Indexed
      Parchment.ParseState
      Parchment.RingBuffer
      Parchment.Session
      Parchment.Telnet
      Parchment.Util
      Parchment.WorldMap
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring >= 0.10
                     , array
                     , brick
                     , containers
                     , husk-scheme
                     , parsec
                     , vty
                     , microlens
                     , microlens-th
                     , mtl
                     , regex-tdfa
                     , stm
                     , unordered-containers
                     , hashable
  default-language:    Haskell2010

executable parchment
  hs-source-dirs:      app
  other-modules:
      ScriptInterface
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , argparser
                     , parchment
                     , network >= 2.6
                     , bytestring >= 0.10
                     , array
                     , brick
                     , vty
                     , text
                     , data-default
                     , microlens
                     , microlens-th
                     , containers
                     , conduit
                     , conduit-extra
                     , conduit-combinators
                     , async
                     , husk-scheme
                     , io-streams
                     , stm
                     , stm-conduit
                     , mtl
                     , parsec
                     , regex-tdfa
                     , scientific
                     , split
                     , terminal-size
                     , unordered-containers
                     , vector
                     , xdg-basedir
  default-language:    Haskell2010

test-suite parchment-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parchment
                     , HUnit
                     , bytestring >= 0.10
                     , containers
                     , husk-scheme
                     , stm
                     , microlens
                     , microlens-th
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/parchment
